# substrate-guard

./: .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  README_ComboA.md  REPRODUCING.md  ROADMAP.md  SECURITY.md  Z3_Paper_Draft.docx  bandit.yaml  compliance_chain.json  compliance_iso27001.json  compliance_iso27001_chain.json  compliance_iso42001.json  compliance_iso42001_chain.json  compliance_soc2.json  compliance_soc2_chain.json  compliance_summary.json  compliance_summary_chain.json  docker-compose.guard.yml  docker-compose.stack.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: adversarial-fuzz.yml  ci.yml  codeql.yml  comply-ml-smoke.yml  docker-stack-audit.yml  supply-chain.yml
benchmarks/: llm_functions.py  run_benchmark.py  run_distill_benchmark.py  run_hw_benchmark.py  run_tool_benchmark.py
docs/: AUDIT_COMPLEX.md  AUDIT_COMPLEX_2026-06-07.md  AUDIT_COMPLEX_2026-06-22.md  DOCKER_EBPF.md  DOCKER_POSTGRES_AUDIT.md  EXTREME_TEST_AUDIT.md  FUNCTIONAL_ROADMAP.md  M1.2-design.md  RUNBOOK_ORDERED.md  l3-perevent-verify.md  observe-sources.md  rego-parity.md  rego-setup.md
docs/deploy-verification/: v13.3.0_smoke_20260424_072807.json  v13.3.1_smoke_20260501_090409.json  v13.3.2_smoke_20260508_061148.json  v13.4.0_smoke_audit_20260518_053350.json  v13.4.0_smoke_chain_20260518_053350.jsonl  v13.4.0_smoke_compliance_summary_20260518_053350.json  v13.4.1_smoke_audit_20260602_090110.json  v13.4.1_smoke_chain_20260602_090110.json  v13.4.1_smoke_compliance_20260602_090110.json  v13.4.2_smoke_audit_20260614_070713.json  v13.4.2_smoke_chain_20260614_070713.json  v13.4.2_smoke_compliance_20260614_070713.json
docs/releases/: v13.1.md  v13.2.1.md  v13.2.10.md  v13.2.11.md  v13.2.12.md  v13.2.13.md  v13.2.14.md  v13.2.15.md  v13.2.16.md  v13.2.2.md  v13.2.3.md  v13.2.4.md  v13.2.5.md  v13.2.6.md  v13.2.7.md  v13.2.8.md  v13.2.9.md  v13.2.md  v13.3.0.md  v13.3.1.md  v13.3.2.md  v13.4.0.md  v13.4.1.md  v13.4.2.md
examples/: orchestrator_inject_events.py  substrate.json
results/: code_verifier_benchmark.json
scripts/: audit.sh  ci_apply_audit_schema.py  config_docker.json  cron-audit.sh  deploy.sh  docker-build-wait.ps1  release.sh  rollback.sh  run-ci-local.ps1  run-ci-local.sh  setup-cron.sh  stack_audit.ps1  stack_audit.sh
scripts/sql/: 001_audit_tables.sql  002_offline_guard_events.sql
substrate_guard/: __init__.py  ast_translator.py  audit.py  chain.py  cli.py  cli_verifier.py  code_verifier.py  combo_cli.py  compliance.py  constants.py  diagnostics.py  distill_verifier.py  guard.py  hw_verifier.py  perevent_verify.py  runtime_env.py  tool_verifier.py
substrate_guard/ast_parse/: __init__.py  json_yaml_patterns.py  parser.py  patterns.py  safety_checker.py  sql_patterns.py
substrate_guard/attest/: __init__.py  attested_guard.py  cli_commands.py  device_key.py  fingerprint.py  local_ca.py  signer.py
substrate_guard/comply/: __init__.py  cli_commands.py  commitment.py  comply_guard.py  fingerprinter.py  protocol.py  verifier.py
substrate_guard/integrations/: __init__.py  vendor_bridge.py
substrate_guard/observe/: __init__.py  events.py  tracer.py
substrate_guard/offline/: __init__.py  cli_commands.py  health.py  local_store.py  offline_guard.py  sync.py
substrate_guard/policy/: __init__.py  engine.py
tests/: fuzz_helpers.py  smoke_test.py  test_ast_parse.py  test_bandit_policy.py  test_chain_head_signature.py  test_ci_schema.py  test_cli_doctor.py  test_cli_verifier_hardening.py  test_combo_cli_smoke.py  test_examples_orchestrator.py  test_layer_wiring.py  test_ops_scripts.py  test_perevent_verify.py  test_policy_mode_resolution.py  test_policy_parity.py  test_postgres_ci.py  test_release_and_rollback.py  test_runtime_env.py
tests/test_adversarial/: test_agent_cli_proposals.py  test_extreme_adversarial.py  test_extreme_guard_fuzz.py  test_fuzz_short_inputs.py
tests/test_attest/: test_attested_guard.py  test_device_key.py  test_fingerprint.py  test_local_ca.py  test_signer.py
tests/test_comply/: test_calibration.py  test_commitment.py  test_comply_guard.py  test_fingerprinter.py  test_protocol.py  test_verifier.py
tests/test_integration/: test_attest.py  test_audit.py  test_bijotel_sink.py  test_chain.py  test_comply.py  test_docs_drift_guard.py  test_guard.py  test_offline.py  test_substrate.py  test_vendor.py  test_vendor_bridge_violation.py
tests/test_observe/: test_observe.py  test_observe_source.py
tests/test_offline/: test_health.py  (+3 more)
(+7 files in other folders)
