[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "substrate-guard"
version = "0.1.0"
description = "Formal verification safety layer for AI outputs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Octavian Untilă", email = "octav@aisophical.com"}]
dependencies = ["z3-solver>=4.12", "sympy>=1.12"]

[project.scripts]
substrate-guard = "substrate_guard.cli:main"

[tool.setuptools.packages.find]
include = ["substrate_guard*"]
