[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "substrate-guard"
version = "13.3.1"
description = "Formal verification safety layer for AI outputs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Octavian Untilă", email = "octav@aisophical.com"}]
dependencies = [
    "z3-solver>=4.12",
    "sympy>=1.12",
    "numpy>=1.24",
    # cryptography: only two APIs are used (Ed25519PrivateKey, serialization)
    # and both predate cryptography 3.0. 3.4 is the oldest release series still
    # receiving security backports in the wider Python ecosystem, so we anchor
    # there — unblocks plain install on Ubuntu 22.04 (3.4.8), Debian 12 (38.0.4),
    # RHEL 9 (36.0.1), and locked-down corporate Python environments.
    "cryptography>=3.4",
    "pyyaml>=6.0",
    "sqlparse>=0.5.0",
    # Upper bound on tree-sitter and tree-sitter-bash is intentional.
    # tree-sitter-bash's own requires_dist is `tree-sitter~=0.24` under its
    # optional [core] extra, but we ship without that extra and pin both
    # packages explicitly here. When a new major-minor (0.26+) is released,
    # test compatibility empirically before bumping the cap.
    "tree-sitter>=0.21,<0.26",
    "tree-sitter-bash>=0.21,<0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.92",
    "bandit>=1.7.0",
]
postgres = [
    "psycopg2-binary>=2.9",
]
# Real semantic embeddings (optional; tests skip if not installed)
comply-ml = [
    "sentence-transformers>=3.0.0",
]

[project.scripts]
substrate-guard = "substrate_guard.cli:main"
# Alias: același CLI unificat (verify + demo + export + ...)
ai-blackbox = "substrate_guard.cli:main"

[tool.setuptools.packages.find]
include = ["substrate_guard*"]

# Only collect test_*.py (exclude tests/smoke_test.py — manual runner, not pytest)
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:The configuration option \"asyncio_default_fixture_loop_scope\":pytest.PytestDeprecationWarning",
]
markers = [
    "postgres_ci: integration tests for CI Postgres job (POSTGRES_CI=1)",
    "fuzz: property-based / random short-input stress (hypothesis)",
]
